notifications: Properly communicate the triggered action

Infer the action name from the originally communicated action name.

BUG: 462278